--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nullbase-language-utils",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -36,14 +36,17 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^5.1.6",
+    "fs-extra": "^0.30.0",
+    "jsonfile": "^2.3.1",
+    "require-reload": "^0.2.2",
+    "xxhashjs": "^0.2.1"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
